# wireless_camera

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  lint.xml  local.properties
gradle/wrapper/: gradle-wrapper.properties
jni/: testRTSPClient.cpp
jni/live/jni/: Makefile  config.android  config.linux-with-shared-libraries
jni/live/jni/BasicUsageEnvironment/: BasicHashTable.cpp  BasicTaskScheduler.cpp  BasicTaskScheduler0.cpp  BasicUsageEnvironment.cpp  BasicUsageEnvironment.mak  BasicUsageEnvironment0.cpp  DelayQueue.cpp  Makefile
jni/live/jni/UsageEnvironment/: HashTable.cpp  Makefile  UsageEnvironment.cpp  UsageEnvironment.mak  strDup.cpp
jni/live/jni/WindowsAudioInputDevice/: WindowsAudioInputDevice_common.hh  WindowsAudioInputDevice_mixer.hh  WindowsAudioInputDevice_noMixer.hh  showAudioInputPorts.cpp
jni/live/jni/groupsock/: GroupEId.cpp  Groupsock.cpp  GroupsockHelper.cpp  IOHandlers.cpp  Makefile  NetAddress.cpp  NetInterface.cpp  groupsock.mak
jni/live/jni/liveMedia/: AC3AudioFileServerMediaSubsession.cpp  AC3AudioRTPSink.cpp  AC3AudioRTPSource.cpp  AC3AudioStreamFramer.cpp  ADTSAudioFileServerMediaSubsession.cpp  ADTSAudioFileSource.cpp  AMRAudioFileServerMediaSubsession.cpp  AMRAudioFileSink.cpp  AMRAudioFileSource.cpp  AMRAudioRTPSink.cpp  AMRAudioRTPSource.cpp  AMRAudioSource.cpp  AVIFileSink.cpp  AudioRTPSink.cpp  Base64.cpp  BasicUDPSink.cpp  BasicUDPSource.cpp  BitVector.cpp  ByteStreamFileSource.cpp  ByteStreamMemoryBufferSource.cpp  ByteStreamMultiFileSource.cpp  DVVideoFileServerMediaSubsession.cpp  DVVideoRTPSink.cpp  DVVideoRTPSource.cpp  DVVideoStreamFramer.cpp  DeviceSource.cpp  DigestAuthentication.cpp  EBMLNumber.cpp  EBMLNumber.hh  FileServerMediaSubsession.cpp  FileSink.cpp  FramedFileSource.cpp  FramedFilter.cpp  FramedSource.cpp  GSMAudioRTPSink.cpp  GenericMediaServer.cpp  H261VideoRTPSource.cpp  H263plusVideoFileServerMediaSubsession.cpp  H263plusVideoRTPSink.cpp  H263plusVideoRTPSource.cpp  (+143 more)
jni/live/jni/mediaServer/: DynamicRTSPServer.cpp  DynamicRTSPServer.hh  Makefile  live555MediaServer  live555MediaServer.cpp  mediaServer.mak  version.hh
jni/live/jni/proxyServer/: Makefile  live555ProxyServer  live555ProxyServer.cpp  proxyServer.mak
jni/live/jni/testProgs/: MPEG2TransportStreamIndexer  MPEG2TransportStreamIndexer.cpp  Makefile  openRTSP  openRTSP.cpp  playSIP  (+59 more)
jni/rtsp/: com_live555_rtsp_RTSPClient.h
res/layout/: activity_main.xml  activity_main0.xml
res/menu/: main.xml
res/values/: strings.xml
src/com/live555/: MainActivity.java  MainActivity0.java  ViedioUtils.java
(+9 files in other folders)
